# Software

./: LICENSE
components/airboy_audio/: CMakeLists.txt
components/airboy_audio/include/: audio.hpp  audio_channel.hpp  audio_channel_wav.hpp  lm4936_audio.hpp
components/airboy_audio/src/: audio.cpp  audio_channel.cpp  audio_channel_wav.cpp  lm4936_audio.cpp
components/airboy_display/: CMakeLists.txt
components/airboy_display/include/: display.hpp  generic_display.hpp  ili9341_display.hpp
components/airboy_display/src/: display.cpp  generic_display.cpp  ili9341_display.cpp
components/airboy_engine/: CMakeLists.txt
components/airboy_engine/include/: camera.hpp  engine.hpp  renderer.hpp  text.hpp
components/airboy_engine/src/: camera.cpp  engine.cpp  renderer.cpp
components/airboy_input/: CMakeLists.txt
components/airboy_input/include/: input.hpp  mcp23008_input.hpp
components/airboy_input/src/: input.cpp  mcp23008_input.cpp
components/airboy_internal/: CMakeLists.txt
components/airboy_internal/include/: internal_bus.hpp  internal_eeprom.hpp
components/airboy_internal/src/: internal_bus.cpp  internal_eeprom.cpp
components/airboy_io/: CMakeLists.txt
components/airboy_io/include/: sdmmc.hpp  spiflash.hpp
components/airboy_io/src/: sdmmc.cpp  spiflash.cpp
components/airboy_math/: CMakeLists.txt
components/airboy_math/include/: math.hpp  vector2.hpp
projects/mijaker/: CMakeLists.txt
tests/audio/: CMakeLists.txt
tests/display/: CMakeLists.txt
tests/eeprom/: CMakeLists.txt
tests/engine/: CMakeLists.txt
tests/input/: CMakeLists.txt
(+17 files in other folders)
